#!/bin/bash -norc
dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during Tcl installation
dnl	to configure the system for the local environment.
#
# RCS: @(#) $Id: configure.in,v 1.23 2007/11/13 13:03:51 josp Exp $

#-----------------------------------------------------------------------
# Sample configure.in for Tcl Extensions.  The only places you should
# need to modify this file are marked by the string __CHANGE__
#-----------------------------------------------------------------------

#-----------------------------------------------------------------------
# __CHANGE__
# Set your package name and version numbers here.
#
# This initializes the environment with PACKAGE_NAME and PACKAGE_VERSION
# set as provided.  These will also be added as -D defs in your Makefile
# so you can encode the package version directly into the source files.
#-----------------------------------------------------------------------

AC_INIT([toltcl], [2.0.2])

#--------------------------------------------------------------------
# Call TEA_INIT as the first TEA_ macro to set up initial vars.
# This will define a ${TEA_PLATFORM} variable == "unix" or "windows"
# as well as PKG_LIB_FILE and PKG_STUB_LIB_FILE.
#--------------------------------------------------------------------

TEA_INIT([3.5])

AC_CONFIG_AUX_DIR(tclconfig)

#--------------------------------------------------------------------
# Load the tclConfig.sh file
#--------------------------------------------------------------------

TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG

#--------------------------------------------------------------------
# Load the tkConfig.sh file if necessary (Tk extension)
#--------------------------------------------------------------------

#TEA_PATH_TKCONFIG
#TEA_LOAD_TKCONFIG

#-----------------------------------------------------------------------
# Handle the --prefix=... option by defaulting to what Tcl gave.
# Must be called after TEA_LOAD_TCLCONFIG and before TEA_SETUP_COMPILER.
#-----------------------------------------------------------------------

TEA_PREFIX

#-----------------------------------------------------------------------
# Standard compiler checks.
# This sets up CC by using the CC env var, or looks for gcc otherwise.
# This also calls AC_PROG_CC, AC_PROG_INSTALL and a few others to create
# the basic setup necessary to compile executables.
#-----------------------------------------------------------------------

TEA_SETUP_COMPILER

#-----------------------------------------------------------------------
# __CHANGE__
# Specify the C source files to compile in TEA_ADD_SOURCES,
# public headers that need to be installed in TEA_ADD_HEADERS,
# stub library C source files to compile in TEA_ADD_STUB_SOURCES,
# and runtime Tcl library files in TEA_ADD_TCL_SOURCES.
# This defines PKG(_STUB)_SOURCES, PKG(_STUB)_OBJECTS, PKG_HEADERS
# and PKG_TCL_SOURCES.
#-----------------------------------------------------------------------

TEA_ADD_SOURCES([crash.c toltcl.c pool.cpp tclutils.cpp tolaccess.cpp tolsergrp.cpp toltableset.cpp toltime.cpp])
TEA_ADD_HEADERS([])
TEA_ADD_INCLUDES([-I\"${srcdir}/generic\"])
TEA_ADD_LIBS([])
TEA_ADD_CFLAGS([])
TEA_ADD_STUB_SOURCES([])
TEA_ADD_TCL_SOURCES([])

#--------------------------------------------------------------------
# __CHANGE__
# A few miscellaneous platform-specific items:
#
# Define a special symbol for Windows (BUILD_sample in this case) so
# that we create the export library with the dll.
#
# Windows creates a few extra files that need to be cleaned up.
# You can add more files to clean if your extension creates any extra
# files.
#
# TEA_ADD_* any platform specific compiler/build info here.
#--------------------------------------------------------------------

if test "${TEA_PLATFORM}" = "windows" ; then
    AC_DEFINE(BUILD_toltcl, 1, [Build windows export dll])
    CLEANFILES="pkgIndex.tcl *.lib *.dll *.exp *.ilk *.pdb vc*.pch"
else
    CLEANFILES="pkgIndex.tcl"
fi
AC_SUBST(CLEANFILES)

#--------------------------------------------------------------------
# __CHANGE__
# Choose which headers you need.  Extension authors should try very
# hard to only rely on the Tcl public header files.  Internal headers
# contain private data structures and are subject to change without
# notice.
# This MUST be called after TEA_LOAD_TCLCONFIG / TEA_LOAD_TKCONFIG
#--------------------------------------------------------------------
TEA_PUBLIC_TCL_HEADERS

#--------------------------------------------------------------------
# Check whether --enable-threads or --disable-threads was given.
# This auto-enables if Tcl was compiled threaded.
#--------------------------------------------------------------------

TEA_ENABLE_THREADS

#--------------------------------------------------------------------
# The statement below defines a collection of symbols related to
# building as a shared library instead of a static library.
#--------------------------------------------------------------------

TEA_ENABLE_SHARED

#--------------------------------------------------------------------
# This macro figures out what flags to use with the compiler/linker
# when building shared/static debug/optimized objects.  This information
# can be taken from the tclConfig.sh file, but this figures it all out.
#--------------------------------------------------------------------

TEA_CONFIG_CFLAGS

#--------------------------------------------------------------------
# Set the default compiler switches based on the --enable-symbols option.
#--------------------------------------------------------------------

TEA_ENABLE_SYMBOLS

#--------------------------------------------------------------------
# Everyone should be linking against the Tcl stub library.  If you
# can't for some reason, remove this definition.  If you aren't using
# stubs, you also need to modify the SHLIB_LD_LIBS setting below to
# link against the non-stubbed Tcl library.  Add Tk too if necessary.
#--------------------------------------------------------------------

AC_DEFINE(USE_TCL_STUBS, 1, [Use Tcl stubs])
#AC_DEFINE(USE_TK_STUBS, 1, [Use Tk stubs])

#--------------------------------------------------------------------
# This macro generates a line to use when building a library.  It
# depends on values set by the TEA_ENABLE_SHARED, TEA_ENABLE_SYMBOLS,
# and TEA_LOAD_TCLCONFIG macros above.
#--------------------------------------------------------------------

TEA_MAKE_LIB

#--------------------------------------------------
# TDT Macros
AC_ARG_WITH([hashmap],AC_HELP_STRING([--with-hashmap=<model>],[<model> may be one of: google, msvc, gcc, icc]),[tol_hashmap=$withval])

AC_ARG_ENABLE([DS],[AC_HELP_STRING([--enable-DS],[Turn on Dynamic Scope (instead of Lexical Scope)])],[AC_DEFINE([__USE_DYNSCOPE__],[1],[Active Dynamic Scope (instead of Lexical Scope)])])
AC_ARG_ENABLE([DBTIME_MONITOR],[AC_HELP_STRING([--enable-DBTIME-MONITOR],[Turn on monitoring of database time consumption])],[AC_DEFINE([__DBTIME_MONITOR__],[1],[Active Database Time Consumption Monitor])][DBTIME_MONITOR=true])
AC_ARG_ENABLE([OIS],[AC_HELP_STRING([--enable-OIS],[Turn on OIS (Object Serialization)])],[AC_DEFINE([__USE_OIS__],[1],[Active Tol Object Serialization])][OIS=true])
AC_ARG_ENABLE([ZipArchive],[AC_HELP_STRING([--enable-ZipArchive],[Turn on ZipArchive Support in OIS module])],[AC_DEFINE([__USE_ZIP_ARCHIVE__],[1],[Turn on ZipArchive Support in OIS module])][ZipArchive=true])
AC_ARG_ENABLE([pool],[AC_HELP_STRING([--enable-pool],[Still no description])],[pool=true])

TOLTCL_REQUIRE_PACKAGE([gsl],[GNU Scientific Library],[gsl/gsl_errno.h],[gsl])
TOLTCL_REQUIRE_PACKAGE([tol],[TOL Language],[tol/tol_bcommon.h],[tol])
#TOLTCL_REQUIRE_PACKAGE([readline],[Readline],[readline/readline.h],[readline])

AC_DEFINE([__USE_NAMEBLOCK__],[1],[No description])
AC_DEFINE([__HASH_MAP_MSVC__],[1],[No description])
AC_DEFINE([__HASH_MAP_GOOGLE__],[2],[No description])
AC_DEFINE([__HASH_MAP_GCC__],[3],[No description])
AC_DEFINE([__HASH_MAP_ICC__],[4],[No description])

if test "${tol_hashmap}" = "google" ; then
  AC_DEFINE([__USE_HASH_MAP__],[__HASH_MAP_GOOGLE__],[No description])
elif test "${tol_hashmap}" = "msvc" ; then
  AC_DEFINE([__USE_HASH_MAP__],[__HASH_MAP_MSVC__],[No description])
elif test "${tol_hashmap}" = "icc" ; then
  AC_DEFINE([__USE_HASH_MAP__],[__HASH_MAP_ICC__],[No description])
else
  AC_DEFINE([__USE_HASH_MAP__],[__HASH_MAP_GCC__],[No description])
fi

AC_DEFINE([__POOL_NONE__],[0],[Still no description])
AC_DEFINE([__POOL_BFSMEM__],[1],[Still no description])

if test "${pool}" = "true"; then
   AC_DEFINE([__USE_POOL__],[__POOL_BFSMEM__],[Still no description])
else
   AC_DEFINE([__USE_POOL__],[__POOL_NONE__],[Still no description])
fi

TOL_DEFINE="-DUNIX -DUSE_DELAY_INIT -D_TOL_FROZEN_"

TEA_ADD_CFLAGS([${TOL_DEFINE}])

#--------------------------------------------------------------------
# Determine the name of the tclsh and/or wish executables in the
# Tcl and Tk build directories or the location they were installed
# into. These paths are used to support running test cases only,
# the Makefile should not be making use of these paths to generate
# a pkgIndex.tcl file or anything else at extension build time.
#--------------------------------------------------------------------

TEA_PROG_TCLSH
#TEA_PROG_WISH

#--------------------------------------------------------------------
# Finally, substitute all of the various values into the Makefile.
# You may alternatively have a special pkgIndex.tcl.in or other files
# which require substituting th AC variables in.  Include these here.
#--------------------------------------------------------------------

AC_OUTPUT([Makefile pkgIndex.tcl])
